compiler/tests/en/errors/arg_count.salam
// EXPECT: E012
func area(w : int, h : int = 2) : int:
    ret w * h
end

func main:
    println(area())
end
